--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: 'Gordita';
-  src: url(Gordita Regular.otf) format('otf');
+  src: url(Gordita-Regular.ttf);
 }
 
 img{
