--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 /* ------------------GENERAL-PROPERTIES--------------------*/
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
 	box-sizing: border-box;
 }
@@ -63,7 +65,7 @@ h4{
 
 body{
     background-color: #232323;
-    font-family: "Gordita", sans-serif;
+    font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-size: 16px;
 	color: #E0E0E0;
