--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
 /* ------------------GENERAL-PROPERTIES--------------------*/
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 *{
 	box-sizing: border-box;
 }
@@ -65,7 +62,7 @@ h4{
 
 body{
     background-color: #232323;
-    font-family: "Poppins", sans-serif;
+    font-family: "Gordita", sans-serif;
 	font-weight: 400;
 	font-size: 16px;
 	color: #E0E0E0;
